fixed css on large screen

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
     href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
     <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
     <title>China Jade</title>
   </head>
   <body>
